# ChromedriverManager

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: loglevel.rs  manager.rs
src/structs/: chrome.rs
src/utils/: appdata.rs  functions.rs
