[package]
name = "chromedriver-manager"
description = "A Rust library for downloading and managing ChromeDrivers."
repository = "https://github.com/Sw1ndlers/ChromedriverManager"
keywords = ["chromedriver", "thirtyfour"]
license = "MIT"
version = "0.4.0"
edition = "2021"
readme = "readme.md"
authors = ["Alex L"]

[dependencies]
anyhow = "1.0.97"
indicatif = "0.17.11"
platform-dirs = "0.3.0"
reqwest = "0.12.7"
serde = "1"
serde_json = "1"
thirtyfour = "0.35.0"
zip-extensions = "0.8.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
name = "chromedriver_manager"
path = "src/lib.rs"

